--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,15 @@
 {
-    "name": "nielbuys/field_calculate",
-    "version": "1.1",
-    "dist": {
-        "url": "https://github.com/NielBuys/Field_calculate/archive/1.1.zip",
-        "type": "zip"
+    "name": "NielBuys/Field_calculate",
+    "type": "library",
+    "authors": [
+        {"name": "Niel Buys"}
+    ],
+    "repositories" : [{
+        "type": "vcs",
+        "url": "https://github.com/NielBuys/Field_calculate"
+    }],
+    "autoload": {
+        "classmap": ["Field_calculate.php"],
+        "files": ["Field_calculate.php"]
     }
 }
