--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "NielBuys/Field_calculate",
     "type": "library",
+	"license": ["LGPL-3.0-or-later"],
     "authors": [
         {"name": "Niel Buys"}
     ],
